Attached to Postgres, changed models, adjusted posts and users files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@
           <li class="nav-item">
         {% endif %}
           {% if current_user.is_authenticated %}
-            <a class="nav-link" href="{{ url_for('posts', name=current_user.name) }}">Profile</a>
+            <a class="nav-link" href="{{ url_for('posts', username=current_user.username) }}">Profile</a>
           {% endif %}
         </li>
         {% if page == 'title' %}
